Fix T56981: python .scene_raycast returned object is not selectable.

Was returning COW evaluated object, not actual data-block...